/*
 * Copyright (c) Bosch Software Innovations GmbH 2016.
 * Part of the SW360 Portal Project.
 *
 * This program and the accompanying materials are made
 * available under the terms of the Eclipse Public License 2.0
 * which is available at https://www.eclipse.org/legal/epl-2.0/
 *
 * SPDX-License-Identifier: EPL-2.0
 */
package org.eclipse.sw360.cvesearch.helper;

import org.eclipse.sw360.datahandler.thrift.RequestStatus;
import org.eclipse.sw360.datahandler.thrift.cvesearch.UpdateType;
import org.eclipse.sw360.datahandler.thrift.cvesearch.VulnerabilityUpdateStatus;

import static org.eclipse.sw360.cvesearch.helper.VulnerabilityUtils.*;
import static org.hamcrest.Matchers.containsInAnyOrder;

import org.eclipse.sw360.datahandler.thrift.vulnerabilities.Vulnerability;
import org.junit.Before;
import org.junit.Test;

import java.util.*;

import static org.junit.Assert.*;

/**
 * @author: birgit.heydenreich@tngtech.com
 */
public class VulnerabilityUtilsTest {
    VulnerabilityUpdateStatus vus1, vus2, vus3, emptyVus;
    Map<UpdateType, List<Vulnerability>> updateMap, failedUpdateMap;

    @Before
    public void setUp() throws Exception {
        emptyVus = getEmptyVulnerabilityUpdateStatus(RequestStatus.SUCCESS);
        vus1 = getEmptyVulnerabilityUpdateStatus(RequestStatus.SUCCESS);
        for (UpdateType updateType : UpdateType.values()) {
            vus1.statusToVulnerabilityIds.get(updateType).addAll(Arrays.asList("id0", "id1", "id2"));
        }
        vus2 = getEmptyVulnerabilityUpdateStatus(RequestStatus.SUCCESS);
        for (UpdateType updateType : UpdateType.values()) {
            vus2.statusToVulnerabilityIds.get(updateType).addAll(Arrays.asList("id3", "id4", "id5"));
        }
        vus3 = getEmptyVulnerabilityUpdateStatus(RequestStatus.FAILURE);
        for (UpdateType updateType : UpdateType.values()) {
            vus3.statusToVulnerabilityIds.get(updateType).addAll(Arrays.asList("id6", "id7", "id8"));
        }
        List<Vulnerability> nlist = Arrays.asList(
                new Vulnerability().setId("n1").setExternalId("ne1"),
                new Vulnerability().setId("n2").setExternalId("ne2"));
        List<Vulnerability> ulist = Arrays.asList(
                new Vulnerability().setId("u1").setExternalId("ue1"),
                new Vulnerability().setId("u2").setExternalId("ue2"),
                new Vulnerability().setId("u3").setExternalId("ue3"));
        List<Vulnerability> olist = Arrays.asList(
                new Vulnerability().setId("o1").setExternalId("oe1"),
                new Vulnerability().setId("o2").setExternalId("oe2"),
                new Vulnerability().setId("o3").setExternalId("oe3"));
        List<Vulnerability> flist = Arrays.asList(
                new Vulnerability().setId("f1").setExternalId("fe1"),
                new Vulnerability().setId("f2").setExternalId("fe2"),
                new Vulnerability().setId("f3").setExternalId("fe3"));
        updateMap = new HashMap<>();
        updateMap.put(UpdateType.NEW, nlist);
        updateMap.put(UpdateType.UPDATED, ulist);
        failedUpdateMap = new HashMap<>();
        failedUpdateMap.put(UpdateType.NEW, nlist);
        failedUpdateMap.put(UpdateType.UPDATED, ulist);
        failedUpdateMap.put(UpdateType.OLD, olist);
        failedUpdateMap.put(UpdateType.FAILED, flist);
    }

    @Test
    public void testGetEmptyVulnerabilityUpdateStatus() throws Exception {
        assertEquals(RequestStatus.SUCCESS, getEmptyVulnerabilityUpdateStatus().requestStatus);
        assertEquals(Collections.EMPTY_LIST,
                getEmptyVulnerabilityUpdateStatus().statusToVulnerabilityIds.get(UpdateType.FAILED));
        assertEquals(Collections.EMPTY_LIST,
                getEmptyVulnerabilityUpdateStatus().statusToVulnerabilityIds.get(UpdateType.NEW));
        assertEquals(Collections.EMPTY_LIST,
                getEmptyVulnerabilityUpdateStatus().statusToVulnerabilityIds.get(UpdateType.UPDATED));
        assertEquals(Collections.EMPTY_LIST,
                getEmptyVulnerabilityUpdateStatus().statusToVulnerabilityIds.get(UpdateType.OLD));
    }

    @Test
    public void testGetEmptyVulnerabilityUpdateStatusWithRequestStatus() throws Exception {
        assertEquals(RequestStatus.FAILURE, getEmptyVulnerabilityUpdateStatus(RequestStatus.FAILURE).requestStatus);
    }

    @Test
    public void testReduceVulnerabilityUpdateStatusEmptySingle() throws Exception {
        assertEquals(RequestStatus.SUCCESS, reduceVulnerabilityUpdateStatus(emptyVus).requestStatus);
        assertEquals(Collections.EMPTY_LIST,
                reduceVulnerabilityUpdateStatus(emptyVus).statusToVulnerabilityIds.get(UpdateType.NEW));
    }

    @Test
    public void testReduceVulnerabilityUpdateStatusSingle() throws Exception {
        assertEquals(RequestStatus.SUCCESS, reduceVulnerabilityUpdateStatus(vus1).getRequestStatus());
        assertEquals(vus1.statusToVulnerabilityIds.get(UpdateType.UPDATED),
                reduceVulnerabilityUpdateStatus(vus1).statusToVulnerabilityIds.get(UpdateType.UPDATED));
        assertEquals(vus1.statusToVulnerabilityIds.get(UpdateType.FAILED),
                reduceVulnerabilityUpdateStatus(vus1).statusToVulnerabilityIds.get(UpdateType.FAILED));
    }

    @Test
    public void testReduceVulnerabilityUpdateStatusTwoWithFirstEmpty() throws Exception {
        assertEquals(RequestStatus.SUCCESS, reduceVulnerabilityUpdateStatus(emptyVus, vus1).getRequestStatus());
        assertEquals(vus1.statusToVulnerabilityIds.get(UpdateType.UPDATED),
                reduceVulnerabilityUpdateStatus(emptyVus, vus1).statusToVulnerabilityIds.get(UpdateType.UPDATED));
        assertEquals(vus1.statusToVulnerabilityIds.get(UpdateType.FAILED),
                reduceVulnerabilityUpdateStatus(emptyVus, vus1).statusToVulnerabilityIds.get(UpdateType.FAILED));
    }

    @Test
    public void testReduceVulnerabilityUpdateStatusTwoWithSecondEmpty() throws Exception {
        assertEquals(RequestStatus.SUCCESS, reduceVulnerabilityUpdateStatus(vus1, emptyVus).getRequestStatus());
        assertEquals(vus1.statusToVulnerabilityIds.get(UpdateType.UPDATED),
                reduceVulnerabilityUpdateStatus(vus1, emptyVus).statusToVulnerabilityIds.get(UpdateType.UPDATED));
        assertEquals(vus1.statusToVulnerabilityIds.get(UpdateType.FAILED),
                reduceVulnerabilityUpdateStatus(vus1, emptyVus).statusToVulnerabilityIds.get(UpdateType.FAILED));
    }

    @Test
    public void testReduceVulnerabilityUpdateStatusFull() throws Exception {
        assertEquals(RequestStatus.FAILURE, reduceVulnerabilityUpdateStatus(vus1, vus2, vus3).requestStatus);

        assertTrue(containsInAnyOrder("id0", "id1", "id2", "id3", "id4", "id5", "id6", "id7", "id8")
                .matches(reduceVulnerabilityUpdateStatus(vus1, vus2, vus3).statusToVulnerabilityIds.get(UpdateType.FAILED)));
        assertTrue(containsInAnyOrder("id0", "id1", "id2", "id3", "id4", "id5", "id6", "id7", "id8")
                .matches(reduceVulnerabilityUpdateStatus(vus1, vus2, vus3).statusToVulnerabilityIds.get(UpdateType.UPDATED)));
        assertTrue(containsInAnyOrder("id0", "id1", "id2", "id3", "id4", "id5", "id6", "id7", "id8")
                .matches(reduceVulnerabilityUpdateStatus(vus1, vus2, vus3).statusToVulnerabilityIds.get(UpdateType.NEW)));
        assertTrue(containsInAnyOrder("id0", "id1", "id2", "id3", "id4", "id5", "id6", "id7", "id8")
                .matches(reduceVulnerabilityUpdateStatus(vus1, vus2, vus3).statusToVulnerabilityIds.get(UpdateType.OLD)));
    }

    @Test
    public void getUpdateStatusFromUpdateMapEmpty() throws Exception {
        VulnerabilityUpdateStatus result = getUpdateStatusFromUpdateMap(new HashMap<>());
        assertEquals(RequestStatus.SUCCESS, result.getRequestStatus());
        assertEquals(Collections.EMPTY_LIST, result.statusToVulnerabilityIds.get(UpdateType.UPDATED));
        assertEquals(Collections.EMPTY_LIST, result.statusToVulnerabilityIds.get(UpdateType.NEW));
    }

    @Test
    public void getUpdateStatusFromUpdateMapSuccess() throws Exception {
        VulnerabilityUpdateStatus result = getUpdateStatusFromUpdateMap(updateMap);
        assertEquals(RequestStatus.SUCCESS, result.getRequestStatus());
        assertTrue(containsInAnyOrder("ue1", "ue2", "ue3")
                .matches(result.statusToVulnerabilityIds.get(UpdateType.UPDATED)));
        assertTrue(containsInAnyOrder("ne1", "ne2")
                .matches(result.statusToVulnerabilityIds.get(UpdateType.NEW)));
    }

    @Test
    public void getUpdateStatusFromUpdateMapFailure() throws Exception {
        VulnerabilityUpdateStatus result = getUpdateStatusFromUpdateMap(failedUpdateMap);
        assertEquals(RequestStatus.FAILURE, result.getRequestStatus());
        assertTrue(containsInAnyOrder("ue1", "ue2", "ue3")
                .matches(result.statusToVulnerabilityIds.get(UpdateType.UPDATED)));
        assertTrue(containsInAnyOrder("ne1", "ne2")
                .matches(result.statusToVulnerabilityIds.get(UpdateType.NEW)));
        assertTrue(containsInAnyOrder("oe1", "oe2", "oe3")
                .matches(result.statusToVulnerabilityIds.get(UpdateType.OLD)));
        assertTrue(containsInAnyOrder("fe1", "fe2", "fe3")
                .matches(result.statusToVulnerabilityIds.get(UpdateType.FAILED)));
    }

    @Test
    public void testSuccessIdsFromUpdateMapSuccess() throws Exception {
        assertTrue(containsInAnyOrder("u1", "u2", "u3", "n1", "n2")
                .matches(successIdsFromUpdateMap(updateMap)));
    }

    @Test
    public void testSuccessIdsFromUpdateMapFailure() throws Exception {
        assertTrue(containsInAnyOrder("u1", "u2", "u3", "n1", "n2", "o1", "o2", "o3")
                .matches(successIdsFromUpdateMap(failedUpdateMap)));
    }
}
